# jorgescript

./: CMakeLists.txt
src/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Runtime.hpp  main.cpp
tests/: math.jorge  sdl2test.jorge  test.jorge
